refactor: add security annotation for role-based access control and enhance deployment configuration